fix [frontend]: Fixed main overflow

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -4,5 +4,9 @@
   margin: 0;
   padding: 0;
 
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+body {
+  overflow: scroll !important;
 }
